force-app/main/default/objects/Master_Map__c/Master_Map__c.object-meta.xml
<CustomObject>
    <label>Master Map</label>
    <nameField>
        <label>Value</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Map</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>