force-app/main/default/objects/Master_Map__c/fields/Aircraft_Description__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Description__c</fullName>
    <description>Aircraft Model</description>
    <label>Aircraft Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>