force-app/main/default/objects/Master_Map__c/fields/Cabin_Ver__c.field-meta.xml
<CustomField>
    <fullName>Cabin_Ver__c</fullName>
    <description>Cabin Ver.</description>
    <label>Cabin Ver.</label>
    <length>20</length>
    <type>Text</type>
</CustomField>