force-app/main/default/objects/Master_Map__c/fields/Check_by_CA_s_station__c.field-meta.xml
<CustomField>
    <fullName>Check_by_CA_s_station__c</fullName>
    <description>Check by CA's station</description>
    <label>Check by CA's station</label>
    <length>255</length>
    <type>Text</type>
</CustomField>