force-app/main/default/objects/Master_Map__c/fields/Checked_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Checked_Procedure__c</fullName>
    <description>Checked Procedure</description>
    <label>Checked Procedure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>