force-app/main/default/objects/Master_Map__c/fields/Code__c.field-meta.xml
<CustomField>
    <fullName>Code__c</fullName>
    <description>Primary External Key for master data</description>
    <externalId>true</externalId>
    <label>Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>