force-app/main/default/objects/Master_Map__c/fields/Depend_On_Object2__c.field-meta.xml
<CustomField>
    <fullName>Depend_On_Object2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refer to parent data level 2</description>
    <label>Depend On Object2</label>
    <referenceTo>Master_Map__c</referenceTo>
    <relationshipLabel>Master Map (Depend On Object2)</relationshipLabel>
    <relationshipName>Master_Map</relationshipName>
    <type>Lookup</type>
</CustomField>