force-app/main/default/objects/Master_Map__c/fields/Depend_On_Object_2_Code__c.field-meta.xml
<CustomField>
    <fullName>Depend_On_Object_2_Code__c</fullName>
    <description>Refer to Primary External Key of parent data level 1 as relationship object</description>
    <formula>Depend_On_Object2__r.Code__c</formula>
    <label>Depend On Object 2 Code</label>
    <type>Text</type>
</CustomField>