force-app/main/default/objects/Master_Map__c/fields/Depend_On_Object__c.field-meta.xml
<CustomField>
    <fullName>Depend_On_Object__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Refer to parent data level 1</description>
    <label>Depend On Object</label>
    <referenceTo>Master_Map__c</referenceTo>
    <relationshipLabel>Master Maps</relationshipLabel>
    <relationshipName>Depend_On_Object</relationshipName>
    <type>Lookup</type>
</CustomField>