force-app/main/default/objects/Master_Map__c/fields/Depend_On_Object_Code_F__c.field-meta.xml
<CustomField>
    <fullName>Depend_On_Object_Code_F__c</fullName>
    <description>Refer to Primary External Key of parent data level 2  as relationship object</description>
    <formula>Depend_On_Object__r.Code__c</formula>
    <label>Depend On Object Code</label>
    <type>Text</type>
</CustomField>