force-app/main/default/objects/Master_Map__c/fields/Depend_On_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>Depend_On_Object_Name__c</fullName>
    <description>Refer to value of parent data level 1</description>
    <formula>Depend_On_Object__r.Name</formula>
    <label>Depend On Object Name</label>
    <type>Text</type>
</CustomField>