force-app/main/default/objects/Master_Map__c/fields/Depend_On_Value__c.field-meta.xml
<CustomField>
    <fullName>Depend_On_Value__c</fullName>
    <description>Refer to value of parent data as text</description>
    <label>Depend On Value</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>