force-app/main/default/objects/Master_Map__c/fields/Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_Name__c</fullName>
    <description>Define type of data</description>
    <externalId>true</externalId>
    <label>Field Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>