force-app/main/default/objects/Master_Map__c/fields/Flight_Number__c.field-meta.xml
<CustomField>
    <fullName>Flight_Number__c</fullName>
    <description>Flight Number</description>
    <label>Flight Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>