force-app/main/default/objects/Master_Map__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Store parts location on specific aircraft</description>
    <label>Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>