force-app/main/default/objects/Master_Map__c/fields/LOPA_Concern_Location__c.field-meta.xml
<CustomField>
    <fullName>LOPA_Concern_Location__c</fullName>
    <label>LOPA Concern Location</label>
    <length>60</length>
    <type>Text</type>
</CustomField>