force-app/main/default/objects/Master_Map__c/fields/Pathto_E_Document__c.field-meta.xml
<CustomField>
    <fullName>Pathto_E_Document__c</fullName>
    <label>Path to E-Document</label>
    <type>TextArea</type>
</CustomField>