force-app/main/default/objects/Master_Map__c/fields/Quantity_to_be_checked__c.field-meta.xml
<CustomField>
    <fullName>Quantity_to_be_checked__c</fullName>
    <description>Store amount of parts on specific location of aircraft</description>
    <label>Quantity to be checked</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>