force-app/main/default/objects/Master_Map__c/fields/Source_System_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_System_Code__c</fullName>
    <description>Define source of Primary External Key</description>
    <externalId>true</externalId>
    <label>Source System Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>