force-app/main/default/objects/Master_Map__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <description>Total number of equipment item</description>
    <label>Total</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>