force-app/main/default/objects/Master_Map__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_Name__c</field>
        <operation>equals</operation>
        <value>E-Document</value>
    </filters>
    <label>All</label>
    <language>en_US</language>
</ListView>