force-app/main/default/objects/Master_Map__c/listViews/Safety_Equipment.listView-meta.xml
<ListView>
    <fullName>Safety_Equipment</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Depend_On_Value__c</columns>
    <columns>Code__c</columns>
    <columns>Depend_On_Object__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Aircraft_Description__c</columns>
    <columns>Cabin_Ver__c</columns>
    <columns>Check_by_CA_s_station__c</columns>
    <columns>Checked_Procedure__c</columns>
    <columns>Description__c</columns>
    <columns>Equipment_Type__c</columns>
    <columns>Location__c</columns>
    <columns>Quantity_to_be_checked__c</columns>
    <columns>Total__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_Name__c</field>
        <operation>startsWith</operation>
        <value>Safety Equipment</value>
    </filters>
    <label>Safety Equipment</label>
    <language>en_US</language>
</ListView>