force-app/main/default/objects/Master_Map__c/listViews/Sales_Organization.listView-meta.xml
<ListView>
    <fullName>Sales_Organization</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Source_System_Code__c</columns>
    <columns>Depend_On_Object__c</columns>
    <columns>Depend_On_Object2__c</columns>
    <columns>Depend_On_Value__c</columns>
    <columns>Field_Name__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_Name__c</field>
        <operation>equals</operation>
        <value>Sales Organization</value>
    </filters>
    <label>Sales Organization</label>
    <language>en_US</language>
</ListView>