force-app/main/default/objects/Master_Map__c/listViews/Special_Processing_ID.listView-meta.xml
<ListView>
    <fullName>Special_Processing_ID</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Source_System_Code__c</columns>
    <columns>Depend_On_Object__c</columns>
    <columns>Depend_On_Value__c</columns>
    <columns>Description__c</columns>
    <columns>Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_Name__c</field>
        <operation>equals</operation>
        <value>Special Processing ID</value>
    </filters>
    <label>Special Processing ID</label>
</ListView>