force-app/main/default/objects/Master_Map__c/listViews/Special_Province.listView-meta.xml
<ListView>
    <fullName>Special_Province</fullName>
    <columns>NAME</columns>
    <columns>Code__c</columns>
    <columns>Depend_On_Object__c</columns>
    <columns>Depend_On_Value__c</columns>
    <columns>Description__c</columns>
    <columns>Field_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Field_Name__c</field>
        <operation>equals</operation>
        <value>Special Province</value>
    </filters>
    <label>Special Province</label>
    <language>en_US</language>
</ListView>